=== 0.1.9.5 (2007-08-12)

* Removed dependency on PGconn in Schema class.

=== 0.1.9.4 (2007-08-11)

* Added Sequel.dbi convenience method for using DBI connection strings to open DBI databases.

=== 0.1.9.3 (2007-08-10)

* Added support for specifying field size in schema definitions (thanks Florian Aßmann.)

* Added migration code based on work by Florian Aßmann.

* Reintroduced metaid dependency. No need to keep a local copy of it.

=== 0.1.9.2 (2007-07-24)

* Removed metaid dependency. Refactored requires in lib/sequel.rb.

=== 0.1.9.1 (2007-07-22)

* Improved robustness of MySQL::Dataset#field_name.

* Added Sequel.single_threaded= convenience method.

=== 0.1.9 (2007-07-21)

* Fixed #update_sql and #insert_sql to support field quoting by calling #field_name.

* Implemented automatic data type conversion in mysql adapter.

* Added support for boolean literals in mysql adapter.

* Added support for ORDER and LIMIT clauses in UPDATE statements in mysql adapter.

* Implemented correct field quoting (using back-ticks) in mysql adapter.

* Wrote basic MySQL spec.

* Fixd MySQL::Dataset to return correct data types with symbols as hash keys.

* Removed discunctional MySQL::Database#transaction.

* Added support for single threaded operation.

* Fixed bug in Dataset#format_eq_expression where Range objects would not be literalized correctly.

* Added parens around postgres LIKE expressions using regexps.

=== 0.1.8 (2007-07-10)

* Implemented Dataset#columns for retrieving the columns in the result set.

* Updated Model with changes to how model-associated datasets work.

* Beefed-up specs. Coverage is now at 95.0%.

* Added support for polymorphic datasets.

* The adapter dataset interface was simplified and standardized. Only four methods need be overriden: fetch_rows, update, insert and delete.

* The Dataset class was refactored. The bulk of the dataset code was moved into separate modules.

* Renamed Dataset#hash_column to Dataset#to_hash.
